--- a/src/reset.css
+++ b/src/reset.css
@@ -25,6 +25,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	background-color: #E5E5E5;
 }
 ol, ul {
 	list-style: none;
